Migrate users of String.format()
modernizer-maven-plugin does not like String.format(), migrate users to
String.formatted().

We also take time to modernize touched classes -- most notably
AbstractBGPSessionNegotiator.

Change-Id: I28ccd401e6b450f1af71307b11a7cbb75287d2a9
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>